--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-	"dependencies": {
-		"mocha": "^9.1.3",
-		"mongodb": "^4.2.1",
-		"mongoose": "^6.0.14"
-	},
-	"devDependencies": {
-		"axios": "^0.24.0",
-		"eslint": "^8.4.0",
-		"eslint-plugin-react": "^7.27.1"
-	}
+  "scripts": {
+    "lint": "eslint"
+  },
+  "dependencies": {
+    "mocha": "^9.1.3",
+    "mongodb": "^4.2.1",
+    "mongoose": "^6.0.14"
+  },
+  "devDependencies": {
+    "axios": "^0.24.0",
+    "eslint": "^8.4.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.27.1"
+  }
 }
