--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "setup-dbs": "node ./db/setupDbs.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "mocha": "^9.1.3",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14"
