--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "setup-dbs": "node ./db/setupDbs.js"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mocha": "^9.1.3",
     "mongodb": "^4.2.1",
-    "mongoose": "^6.0.14"
+    "mongoose": "^6.0.15"
   },
   "devDependencies": {
     "axios": "^0.24.0",
