--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "lint": "eslint",
-    "setup-dbs": "node ./db/setupDbs.js"
+    "setup-dbs": "node ./db/setupDbs.js",
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
@@ -11,9 +12,11 @@
     "mongoose": "^6.0.15"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.1.1",
     "axios": "^0.24.0",
     "eslint": "^8.4.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.27.1"
+    "eslint-plugin-react": "^7.27.1",
+    "jest": "^27.4.3"
   }
 }
