--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "scripts": {
-    "lint": "eslint",
-    "setup-dbs": "node ./db/setupDbs.js",
-    "test": "jest"
-  },
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mocha": "^9.1.3",
-    "mongodb": "^4.2.1",
-    "mongoose": "^6.0.15"
-  },
-  "devDependencies": {
-    "@shelf/jest-mongodb": "^2.1.1",
-    "axios": "^0.24.0",
-    "eslint": "^8.4.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.27.1",
-    "jest": "^27.4.3"
-  }
+	"scripts": {
+		"lint": "eslint",
+		"setup-dbs": "node ./db/setupDbs.js",
+		"test": "jest",
+		"start": "node server.js"
+	},
+	"dependencies": {
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"mocha": "^9.1.3",
+		"mongodb": "^4.2.1",
+		"mongoose": "^6.0.15"
+	},
+	"devDependencies": {
+		"@shelf/jest-mongodb": "^2.1.1",
+		"axios": "^0.24.0",
+		"eslint": "^8.4.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-react": "^7.27.1",
+		"jest": "^27.4.3"
+	}
 }
